# monet-painting-gans

./: .gitignore  README.md  main.py  monet-cyclegan.ipynb  pyproject.toml
data/: gallstone-disease.json
notebooks/: cancer_detection.ipynb  gallstone_analysis.ipynb  submission.csv
results/reports/: model_metrics.md  results.md
results/reports/summaries/: 00_master_summary.md  01_data_integrity_summary.md  02_eda_summary.md  03_preprocessing_summary.md  04_feature_selection_summary.md  05_logistic_regression_summary.md  06_random_forest_summary.md  README.md
