[project]
name = "predict-gallstone-disease"
version = "0.1.0"
description = "A supervised Learning problem to perform EDA and model analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
